updated and enhanced the backend apis